--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.2",
     "angularfire2": "^5.4.2",
     "firebase": "^7.9.3",
+    "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
