--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "firebase-cli": "^1.2.0",
+    "firebase-tools": "^8.4.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
