--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.2",
     "@angular/material": "^9.0.1",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
-    "angularfire2": "^5.4.2",
     "firebase": "^7.9.3",
     "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
