--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run biz-mate:serve-ssr",
+    "serve:ssr": "node dist/biz-mate/server/main.js",
+    "build:ssr": "ng build --prod && ng run biz-mate:server:production",
+    "prerender": "ng run biz-mate:prerender"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +26,10 @@
     "@angular/material": "^9.0.1",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
+    "@angular/platform-server": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@nguniversal/express-engine": "^9.0.1",
+    "express": "^4.15.2",
     "firebase": "^7.9.3",
     "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
@@ -34,6 +41,8 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
+    "@nguniversal/builders": "^9.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.149",
