--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev:ssr": "ng run biz-mate:serve-ssr",
-    "serve:ssr": "node dist/biz-mate/server/main.js",
+    "serve:ssr": "node dist/biz-mate/dist/biz-mate/server/main.js",
     "build:ssr": "ng build --prod && ng run biz-mate:server:production",
     "prerender": "ng run biz-mate:prerender"
   },
@@ -21,7 +21,7 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
-    "@angular/fire": "^6.0.0",
+    "@angular/fire": "^6.0.0-rc.2",
     "@angular/forms": "~9.0.2",
     "@angular/material": "^9.0.1",
     "@angular/platform-browser": "~9.0.2",
@@ -49,7 +49,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "firebase-cli": "^1.2.0",
-    "firebase-tools": "^8.4.3",
+    "firebase-tools": "^8.6.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
@@ -61,6 +61,13 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "@angular-devkit/architect": "~0.900",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.3.0",
+    "firebase-functions-test": "^0.1.7"
   }
 }
