--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "dev:ssr": "ng run biz-mate:serve-ssr",
-    "serve:ssr": "node dist/biz-mate/dist/biz-mate/server/main.js",
-    "build:ssr": "ng build --prod && ng run biz-mate:server:production",
-    "prerender": "ng run biz-mate:prerender"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -21,15 +16,12 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
-    "@angular/fire": "^6.0.0-rc.2",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.0.2",
     "@angular/material": "^9.0.1",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
-    "@angular/platform-server": "~9.0.2",
     "@angular/router": "~9.0.2",
-    "@nguniversal/express-engine": "^9.0.1",
-    "express": "^4.15.2",
     "firebase": "^7.9.3",
     "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
@@ -41,8 +33,6 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@nguniversal/builders": "^9.0.1",
-    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.149",
@@ -60,14 +50,6 @@
     "lodash": "^4.17.19",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5",
-    "@angular-devkit/architect": "~0.900",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "firebase-admin": "^8.9.2",
-    "firebase-functions": "^3.3.0",
-    "firebase-functions-test": "^0.1.7"
+    "tslint": "~5.18.0"
   }
 }
