--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "deploy": "ng build --prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
