--- a/firebase.json
+++ b/firebase.json
@@ -23,5 +23,13 @@
   },
   "storage": {
     "rules": "storage.rules"
+  },
+  "functions": {
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
+  },
+  "emulators": {
+    "firestore": {
+      "port": "5002"
+    }
   }
 }
