--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@firebase/polyfill": "^0.3.36",
+    "core-js": "^3.12.1",
     "firebase": "^7.9.3",
     "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
@@ -40,7 +42,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "firebase-cli": "^1.2.0",
-    "firebase-tools": "^8.6.0",
+    "firebase-tools": "^8.20.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
