--- a/firebase.json
+++ b/firebase.json
@@ -15,10 +15,7 @@
       "**/node_modules/**"
     ],
     "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
+      { "source": "**", "function": "universal" }
     ]
   },
   "storage": {
