--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "deploy": "ng build --prod && firebase deploy"
+    "build-dev": "ng build --configuration development && npm run build:ssr && npm run build:functions",
+    "build-prod": "ng build --prod --configuration production && npm run build:ssr && npm run build:functions",
+    "build:ssr": "ng run biz-mate:server && npm run webpack:ssr",
+    "build:functions": "npm run --prefix functions build",
+    "webpack:ssr": "webpack --config webpack.server.config.js",
+    "serve:ssr": "node dist/biz-mate-webpack/server.js",
+    "deploy-dev": "firebase deploy --project biz-mate-test",
+    "deploy-prod": "firebase deploy --project bizmate-5f9a4"
   },
   "private": true,
   "dependencies": {
@@ -22,10 +28,12 @@
     "@angular/material": "^9.0.1",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
+    "@angular/platform-server": "~9.0.2",
     "@angular/router": "~9.0.2",
     "@firebase/polyfill": "^0.3.36",
     "core-js": "^3.12.1",
     "firebase": "^7.9.3",
+    "localstorage-polyfill": "^1.0.1",
     "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -36,11 +44,14 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
+    "@nguniversal/express-engine": "^12.0.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "express": "^4.17.1",
     "firebase-cli": "^1.2.0",
     "firebase-tools": "^8.20.0",
     "jasmine-core": "~3.5.0",
@@ -52,7 +63,11 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "lodash": "^4.17.21",
     "protractor": "~5.4.3",
+    "ts-loader": "^8.2.0",
     "ts-node": "~8.3.0",
-    "tslint": "~5.18.0"
+    "tslint": "~5.18.0",
+    "webpack-cli": "^4.7.2",
+    "ws": "^7.4.6",
+    "xhr2": "^0.2.1"
   }
 }
