--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/assets",
-              "src/sitemap.xml",
-              "src/robots.txt"
+              "src/assets"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -50,6 +48,10 @@
               "extractLicenses": true,
               "vendorChunk": true,
               "buildOptimizer": true,
+              "assets": [
+                "src/sitemap.xml",
+                "src/robots.txt"
+              ],
               "budgets": [
                 {
                   "type": "initial",
