--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@firebase/polyfill": "^0.3.36",
     "core-js": "^3.12.1",
     "firebase": "^7.9.3",
+    "ngx-image-compress": "^11.0.3",
     "ngx-image-cropper": "^3.1.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
