--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ testem.log
 Thumbs.db
 
 /src/environments/environment.prod.ts
+/src/environments/environment.stage.ts
 /src/environments/environment.ts
 
 /functions
