--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "build_dev": "node prebuild.js && ng build",
+    "build_dev": "node prebuild.js && ng build --configuration stage",
     "build_prod": "node prebuild.js && ng build --configuration production",
     "deploy_dev": "npm run build_dev && firebase deploy -P staging",
     "deploy_prod": "npm run build_prod && firebase deploy -P default"
@@ -20,7 +20,7 @@
     "@angular/common": "~12.2.12",
     "@angular/compiler": "~12.2.12",
     "@angular/core": "~12.2.12",
-    "@angular/fire": "^6.1.5",
+    "@angular/fire": "^7.1.1",
     "@angular/forms": "~12.2.12",
     "@angular/material": "^12.2.12",
     "@angular/platform-browser": "~12.2.12",
@@ -28,9 +28,10 @@
     "@angular/router": "~12.2.12",
     "@firebase/polyfill": "^0.3.36",
     "core-js": "^3.12.1",
-    "firebase": "^8.0.1",
+    "firebase": "^9.1.3",
     "ngx-image-compress": "^11.0.3",
     "ngx-image-cropper": "^3.1.9",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -46,7 +47,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "firebase-cli": "^1.2.0",
-    "firebase-tools": "^9.20.0",
+    "firebase-tools": "^10.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
