--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,13 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2018",
+      "es2015",
       "dom"
     ]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "enableIvy": true
   }
 }
